# servant

./: .ghci  .git-blame-ignore-revs  .gitignore  .hlint.yaml  .readthedocs.yml  .stylish-haskell.yaml  .travis-ghc.sh  .travis-ghcjs.sh  .travis.yaml  .travis.yml  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dangerfile  GHCJS.md  Gemfile  HLint.hs  LICENSE  Makefile  README.md  Rakefile  Servant-API-Alternative.html  Servant-API-Capture.html  Servant-API-Delete.html  Servant-API-Get.html  Servant-API-Header.html  Servant-API-Post.html  Servant-API-Put.html  Servant-API-QueryParam.html  Servant-API-Raw.html  Servant-API-ReqBody.html  Servant-API-Sub.html  Servant-API.html  Servant-Common-Text.html  Servant-QQ.html  Servant-Server.html  Servant-Utils-Links.html  Servant-Utils-StaticFiles.html  Servant.html  TODO.md  (+57 more)
doc/tutorial/: .ghci  ApiType.lhs  Authentication.lhs  Client.lhs  Docs.lhs  Javascript.lhs  LICENSE  Server.lhs  Server.md  api-type.lhs  client.lhs  convert.hs  docs.lhs  index.rst  install.rst  javascript.lhs  server.lhs  stack.yaml  tinc.yaml  tutorial.cabal
doc/tutorial/check/: check.sh  tinc.yaml
doc/tutorial/static/: index.html  ui.js
doc/tutorial/test/: JavascriptSpec.hs  Spec.hs
servant/: .ghci  CHANGELOG.md  README.md  Setup.hs  Setup.lhs  default.nix  servant.cabal  shell.nix
servant-blaze/: LICENSE  default.nix  servant-blaze.cabal  shell.nix
servant-client/: CHANGELOG.md  README.md  default.nix  docs.sh  servant-client.cabal  shell.nix  stack-ghc.yaml  stack-ghcjs.yaml
servant-client-core/: CHANGELOG.md  LICENSE  README.md  servant-client-core.cabal
servant-client-ghcjs/: CHANGELOG.md  README.md  servant-client-ghcjs.cabal  tinc.yaml
servant-client-jsaddle/: CHANGELOG.md  README.md  default.nix  servant-client-jsaddle.cabal
servant-client/src/Servant/: Client.hs
servant-client/test/: Spec.hs
servant-client/test/Servant/: BasicAuthSpec.hs  BrokenSpec.hs  ClientSpec.hs  ClientTestUtils.hs  ConnectionErrorSpec.hs  FailSpec.hs  GenAuthSpec.hs  GenericClientSpec.hs  GenericSpec.hs  HoistClientSpec.hs  MiddlewareSpec.hs  StreamSpec.hs  SuccessSpec.hs  TestUtils.hs  WrappedApiSpec.hs
servant-client/test/ghcjs/: build-test-server.sh  package.yaml  run-tests.sh  stack-ghc.yaml  stack-ghcjs.yaml  testServer.cabal  testServer.hs
servant-conduit/: CHANGELOG.md  README.md  servant-conduit.cabal
servant-conduit/example/: Main.hs
servant-conduit/src/Servant/: Conduit.hs
servant-docs/: .ghci  CHANGELOG.md  README.md  default.nix  docs.sh  servant-docs.cabal  shell.nix
servant-docs/example/: greet.hs  greet.md
servant-docs/golden/: comprehensive.md
servant-docs/src/Servant/: Docs.hs
servant-docs/test/: Spec.hs
servant-docs/test/Servant/: DocsSpec.hs
servant-examples/: CHANGELOG.md  default.nix  servant-examples.cabal  shell.nix  tinc.yaml
servant-examples/auth-combinator/: auth-combinator.hs
servant-examples/basic-auth/: basic-auth.hs
servant-examples/digest-auth/: digest-auth.hs
servant-examples/getting-started/: GS1.hs  GS10.hs  GS2.hs  GS3.hs  GS4.hs  GS5.hs  GS6.hs  GS7.hs  GS8.hs  GS9.hs  getting-started.hs  gs8-main.hs
servant-examples/getting-started/gs9/: index.html
servant-examples/hackage/: hackage.hs
servant-examples/socket-io-chat/: Chat.hs  socket-io-chat.hs
servant-examples/socket-io-chat/resources/: index.html  main.js
servant-examples/tutorial/: T1.hs  T10.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs  T7.hs  T8.hs  T9.hs  convert.hs  t8-main.hs  tutorial.hs
servant-examples/tutorial/t9/: index.html  ui.js
servant-examples/wai-middleware/: wai-middleware.hs
servant-foreign/: CHANGELOG.md  README.md  servant-foreign.cabal
servant-foreign/src/Servant/: Foreign.hs
servant-foreign/test/Servant/: ForeignSpec.hs
servant-http-streams/: CHANGELOG.md  README.md  servant-http-streams.cabal
servant-http-streams/src/Servant/: HttpStreams.hs
servant-http-streams/test/Servant/: ClientSpec.hs  StreamSpec.hs
servant-io-streams/: LICENSE  README.md  servant-io-streams.cabal
servant-io-streams/example/: Main.hs
servant-jquery/: CHANGELOG.md  README.md  TODO.md  default.nix  docs.sh  servant-jquery.cabal
servant-jquery/examples/: README.md  counter.hs  counter.md
servant-jquery/examples/www/: api.js  index.html
servant-jquery/src/Servant/: JQuery.hs
servant-js/: CHANGELOG.md  README.md  default.nix  docs.sh  servant-js.cabal  shell.nix  tinc.yaml
servant-js/examples/: counter.hs
servant-jsaddle/: CHANGELOG.md  servant-jsaddle.cabal
servant-jsaddle/test/: Spec.hs
servant-machines/: CHANGELOG.md  LICENSE  README.md  servant-machines.cabal
servant-machines/example/: Main.hs
servant-mock/: .ghci  LICENSE  default.nix  servant-mock.cabal  shell.nix
servant-mock/example/: main.hs
servant-pipes/: CHANGELOG.md  README.md  servant-pipes.cabal
servant-pipes/example/: Main.hs
servant-purescript/: .gitignore  .travis.yml  HLint.hs  LICENSE  README.md  servant-purescript.cabal
servant-purescript/test/: Spec.hs
servant-quickcheck/: .envrc  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.yaml  LICENSE  README.md  cabal.haskell-ci  cabal.project  flake.nix  servant-quickcheck.cabal  stack-ghc-8.0.1.yaml  stack-lts-6.yaml  stack-lts-7.yaml  stack-lts-9.yaml  stack.yaml
servant-quickcheck/doc/: Main.hs  ServersEqual.lhs  doc.cabal  index.rst  requirements.txt
servant-quickcheck/example/: Main.hs
servant-quickcheck/test/: Doctest.hs
servant-server/: CHANGELOG.md  LICENSE  README.md  Setup.lhs  codex.tags  default.nix  servant-server.cabal  shell.nix
servant-server-superrecord/: LICENSE  README.md  servant-server-superrecord.cabal
servant-server/example/: README.md  greet.hs  greet.md
servant-server/src/: Servant.hs
servant-server/test/: Doctests.hs  doctests.hsc
servant-static/: servant-static.cabal
servant-swagger/: .travis.yml  CHANGELOG.md  README.md  Setup.hs  cabal.haskell-ci  cabal.project  servant-swagger.cabal  stack.yaml
servant-swagger/example/: example.cabal  swagger.json
servant-swagger/test/: doctests.hs
servant/test/: Doctests.hs  doctests.hs  doctests.hsc
(+643 files in other folders)
