name:                servant-client
version:             0.2.1
synopsis: automatical derivation of querying functions for servant webservices
description:
  This library lets you derive automatically Haskell functions that
  let you query each endpoint of a <http://hackage.haskell.org/package/servant servant> webservice.
  .
  Example below.
  .
  > type MyApi = "books" :> Get [Book] -- GET /books
  >         :<|> "books" :> ReqBody Book :> Post Book -- POST /books
  >
  > myApi :: Proxy MyApi
  > myApi = Proxy
  >
  > getAllBooks :: BaseUrl -> EitherT String IO [Book]
  > postNewBook :: Book -> BaseUrl -> EitherT String IO Book
  > (getAllBooks :<|> postNewBook) = client myApi
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari, Sönke Hahn, Julian K. Arni
maintainer:          alpmestan@gmail.com
copyright:           2014 Zalora South East Asia Pte Ltd
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC >= 7.8
homepage:            http://haskell-servant.github.io/
Bug-reports:         http://github.com/haskell-servant/servant-client/issues
source-repository head
  type: git
  location: http://github.com/haskell-servant/servant-client.git

library
  exposed-modules:
    Servant.Client
    Servant.Common.BaseUrl
    Servant.Common.Req
  build-depends:
      base >=4.7 && <5
    , aeson
    , attoparsec
    , bytestring
    , either
    , exceptions
    , http-client
    , http-types
    , network-uri >= 2.6
    , safe
    , servant >= 0.2.1
    , string-conversions
    , text
    , transformers
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options:
    -Wall -fno-warn-name-shadowing -fno-warn-missing-signatures
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base == 4.*
    , aeson
    , bytestring
    , deepseq
    , either
    , hspec == 2.*
    , http-types
    , network >= 2.6
    , QuickCheck
    , servant >= 0.2.1
    , servant-client
    , servant-server >= 0.2.1
    , wai
    , warp
