name:                servant-docs
version:             0.3.1
synopsis:            generate API docs for your servant webservice
description:
  Library for generating API docs from a servant API definition.
  .
  Runnable example <https://github.com/haskell-servant/servant-docs/blob/master/example/greet.hs here>.
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari, Sönke Hahn, Julian K. Arni
maintainer:          alpmestan@gmail.com
copyright:           2014-2015 Zalora South East Asia Pte Ltd
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC >= 7.8
homepage:            http://haskell-servant.github.io/
Bug-reports:         http://github.com/haskell-servant/servant-docs/issues
extra-source-files:
  CHANGELOG.md
  README.md
source-repository head
  type: git
  location: http://github.com/haskell-servant/servant-docs.git

library
  exposed-modules:
    Servant.Docs
  build-depends:
      base >=4.7 && <5
    , aeson
    , aeson-pretty < 0.8
    , bytestring
    , hashable
    , lens
    , servant >= 0.2.1 && < 0.3
    , string-conversions
    , system-filepath
    , text
    , unordered-containers
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

executable greet-docs
  main-is: greet.hs
  hs-source-dirs: example
  ghc-options: -Wall
  build-depends: base, aeson, servant, servant-docs, text
  default-language: Haskell2010
