name:                servant-jquery
version:             0.2
synopsis:            Automatically derive jquery-based javascript functions to query servant webservices
description:         Automatically derive jquery-based javascript functions to query servant webservices
homepage:            http://github.com/alpmestan/servant
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alpmestan@gmail.com
copyright:           2014 Alp Mestanogullari
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Servant.JQuery
  other-modules:       Servant.JQuery.Internal
  -- other-extensions:    
  build-depends:       base >=4.5 && <5, servant >= 0.2, lens >= 4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall

executable counter
  main-is: counter.hs
  ghc-options: -O2 -Wall
  hs-source-dirs: examples
  build-depends:
      aeson
    , base
    , filepath
    , servant >= 0.2
    , servant-jquery >= 0.2
    , stm
    , transformers
    , warp
  default-language: Haskell2010
