name:                servant-jquery
version:             0.2.1
synopsis:            Automatically derive jquery-based javascript functions to query servant webservices
description:
  Automatically derive jquery-based javascript functions to query servant webservices.
  .
  Example <https://github.com/haskell-servant/servant-jquery/blob/master/examples/counter.hs here> that serves the generated javascript to a webpage that lets you
  trigger webservice calls.
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alpmestan@gmail.com
copyright:           2014 Alp Mestanogullari
category:            Web
build-type:          Simple
cabal-version:       >=1.10
homepage:            http://haskell-servant.github.io/
Bug-reports:         http://github.com/haskell-servant/servant-jquery/issues
source-repository head
  type: git
  location: http://github.com/haskell-servant/servant-jquery.git

flag example
  description: Build the example too
  manual: True
  default: False

library
  exposed-modules:     Servant.JQuery
  other-modules:       Servant.JQuery.Internal
  build-depends:       base >=4.5 && <5, servant >= 0.2.1, lens >= 4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable counter
  main-is: counter.hs
  ghc-options: -O2 -Wall
  hs-source-dirs: examples
  
  if flag(example)
    buildable: True
  else
    buildable: False

  build-depends:
      aeson
    , base
    , filepath
    , servant >= 0.2.1
    , servant-server >= 0.2.1
    , servant-jquery >= 0.2.1
    , stm
    , transformers
    , warp
  default-language: Haskell2010
