name:                servant
version:             0.2
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari, Sönke Hahn, Julian K. Arni
maintainer:          alpmestan@gmail.com
copyright:           2014 Zalora South East Asia Pte Ltd
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC >= 7.8

library
  exposed-modules:
    Servant
    Servant.API
    Servant.API.Alternative
    Servant.API.Capture
    Servant.API.Delete
    Servant.API.Get
    Servant.API.Post
    Servant.API.Put
    Servant.API.QueryParam
    Servant.API.Raw
    Servant.API.ReqBody
    Servant.API.Sub
    Servant.Common.Text
    Servant.QQ
    Servant.Server
    Servant.Utils.Links
    Servant.Utils.StaticFiles
  build-depends:
      base >=4.7 && <5
    , aeson
    , attoparsec
    , bytestring
    , either
    , http-types
    , network-uri >= 2.6
    , parsec
    , safe
    , split
    , string-conversions
    , system-filepath
    , template-haskell
    , text
    , transformers
    , wai
    , wai-app-static
    , warp
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O0 -Wall

executable greet
  main-is: greet.hs
  hs-source-dirs: example
  ghc-options: -O0 -Wall
  default-language: Haskell2010
  build-depends:
      base
    , servant
    , aeson
    , warp
    , wai
    , text

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options:
    -Wall -fno-warn-name-shadowing -fno-warn-missing-signatures
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base == 4.*
    , aeson
    , bytestring
    , directory
    , either
    , exceptions
    , hspec == 2.*
    , hspec-wai
    , http-types
    , network >= 2.6
    , QuickCheck
    , parsec
    , servant
    , string-conversions
    , temporary
    , text
    , transformers
    , wai
    , wai-extra
    , warp
