name:                servant
version:             0.2.1
synopsis:            A family of combinators for defining webservices APIs
description:
  A family of combinators for defining webservices APIs and serving them
  .
  You can learn about the basics in <http://haskell-servant.github.io/getting-started/ the getting started> guide.
  .
  <https://github.com/haskell-servant/servant-server/blob/master/example/greet.hs Here>'s a runnable example, with comments, that defines a dummy API and
  implements a webserver that serves this API, using the <http://hackage.haskell.org/package/servant-server servant-server> package.
homepage:            http://haskell-servant.github.io/
Bug-reports:         http://github.com/haskell-servant/servant/issues
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari, Sönke Hahn, Julian K. Arni
maintainer:          alpmestan@gmail.com
copyright:           2014 Zalora South East Asia Pte Ltd
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC >= 7.8
source-repository head
  type: git
  location: http://github.com/haskell-servant/servant.git

library
  exposed-modules:
    Servant.API
    Servant.API.Alternative
    Servant.API.Capture
    Servant.API.Delete
    Servant.API.Get
    Servant.API.Header
    Servant.API.Post
    Servant.API.Put
    Servant.API.QueryParam
    Servant.API.Raw
    Servant.API.ReqBody
    Servant.API.Sub
    Servant.Common.Text
    Servant.QQ
    Servant.Utils.Links
  build-depends:
      base >=4.7 && <5
    , text >= 1
    , template-haskell
    , parsec >= 3.1
    , string-conversions >= 0.3
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options:
    -Wall -fno-warn-name-shadowing -fno-warn-missing-signatures
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base == 4.*
    , hspec == 2.*
    , QuickCheck
    , parsec
    , servant
    , string-conversions
    , text
