name:                servant-blaze
version:             0.4.0.0
synopsis:            Blaze-html support for servant
description:         Blaze-html support for servant
homepage:            http://haskell-servant.github.io/
license:             BSD3
license-file:        LICENSE
author:              Julian K. Arni
maintainer:          jkarni@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Servant.HTML.Blaze
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <5
                     , servant == 0.4.*
                     , http-media
                     , blaze-html
  hs-source-dirs:      src
  default-language:    Haskell2010
