name:                servant-client-ghcjs
version:             0.13
synopsis: automatical derivation of querying functions for servant webservices for ghcjs
description:
  This library lets you automatically derive Haskell functions that
  let you query each endpoint of a <http://hackage.haskell.org/package/servant servant> webservice.
  .
  See <http://haskell-servant.readthedocs.org/en/stable/tutorial/Client.html the client section of the tutorial>.
  .
  <https://github.com/haskell-servant/servant/blob/master/servant-client/CHANGELOG.md CHANGELOG>
license:             BSD3
license-file:        LICENSE
author:              Servant Contributors
maintainer:          haskell-servant-maintainers@googlegroups.com
copyright:           2014-2016 Zalora South East Asia Pte Ltd, 2016-2017 Servant Contributors
category:            Servant, Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC >= 7.8
homepage:            http://haskell-servant.readthedocs.org/
Bug-reports:         http://github.com/haskell-servant/servant/issues
extra-source-files:
  CHANGELOG.md
  README.md
source-repository head
  type: git
  location: http://github.com/haskell-servant/servant.git

library
  exposed-modules:
    Servant.Client.Ghcjs
    Servant.Client.Internal.XhrClient
  build-depends:
      base                  >= 4.7      && < 4.12
    , bytestring            >= 0.10     && < 0.11
    , case-insensitive      >= 1.2.0.0  && < 1.3.0.0
    , containers            >= 0.5      && < 0.6
    , exceptions            >= 0.8      && < 0.11
    , ghcjs-base            >= 0.2.0.0  && < 0.3.0.0
    , ghcjs-prim            >= 0.1.0.0  && < 0.2.0.0
    , http-media            >= 0.6.2    && < 0.8
    , http-types            >= 0.12     && < 0.13
    , monad-control         >= 1.0.0.4  && < 1.1
    , mtl                   >= 2.1      && < 2.3
    , semigroupoids         >= 4.3      && < 5.3
    , servant-client-core   == 0.13.*
    , string-conversions    >= 0.3      && < 0.5
    , transformers          >= 0.3      && < 0.6
    , transformers-base     >= 0.4.4    && < 0.5
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  if impl(ghc >= 8.0)
    ghc-options: -Wno-redundant-constraints
